--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Treasure troves -- Fiction'
 - !lcsh 'New York (N.Y.) -- Fiction'
 - !lcsh 'Courtship -- Fiction'
+- GITenberg
 title: Wilt Thou Torchy
 url: http://www.gutenberg.org/ebooks/17333
